--- a/src/styles/global/core/_normalize.scss
+++ b/src/styles/global/core/_normalize.scss
@@ -69,18 +69,12 @@
     line-height: 1.25;
   }
 
-  ol,
-  ul,
-  dl {
-    margin-top: 0;
-    margin-bottom: 1rem;
-  }
-
-  ol ol,
-  ul ul,
-  ol ul,
-  ul ol {
-    margin-bottom: 0;
+  // RichText uses <p> inside <li> elements as part of its schema.
+  // Remove margin in this case for display purposes.
+  li {
+    p {
+      margin: 0;
+    }
   }
 
   dt {
