--- a/src/styles/components/_boolean.scss
+++ b/src/styles/components/_boolean.scss
@@ -1,6 +1,6 @@
 .boolean {
   background: var(--input-background);
-  border-radius: var(--border-radius);
+  border-radius: 1rem 1rem 0 0;
   padding: .75rem;
   margin-top: 1rem;
 
@@ -28,7 +28,7 @@
   align-items: center;
   margin-right: 1rem;
   background: var(--input-background);
-  color: var(--input-text);
+  color: var(--input-label);
   transition-property: border-color;
   transition-duration: var(--animation-duration-standard);
   transition-timing-function: var(--animation-easing);
