--- a/src/styles/components/form/fields/_checkbox.scss
+++ b/src/styles/components/form/fields/_checkbox.scss
@@ -1,15 +1,13 @@
-$size: 2rem;
-$border: 0.1rem;
-$border-space: 0.25rem;
-
 .form-field-checkbox {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   cursor: pointer;
   position: relative;
-  margin-bottom: 1rem;
+  margin-bottom: unit(2);
+
 
   &:last-child {
-    margin: 0;
+    margin-bottom: 0;
   }
 
   &__input {
@@ -19,9 +17,9 @@ $border-space: 0.25rem;
 
   &__checkbox {
     position: relative;
-    width: $size;
-    height: $size;
-    display: inline-block;
+    width: $global-input-element-size;
+    height: $global-input-element-size;
+    display: inline-flex;
 
     &::before {
       position: absolute;
@@ -31,7 +29,7 @@ $border-space: 0.25rem;
       width: 100%;
       height: 100%;
       border-color: var(--input-border);
-      border-width: $border;
+      border-width: $global-input-border-size;
       border-style: solid;
       transition: border-color var(--animation-easing) var(--animation-duration-standard);
     }
@@ -39,10 +37,10 @@ $border-space: 0.25rem;
     &::after {
       position: absolute;
       content: '';
-      top: $border + $border-space;
-      left: $border + $border-space;
-      width: calc(100% - #{($border + $border-space) * 2});
-      height: calc(100% - #{($border + $border-space) * 2});
+      top: $global-input-border-size + $global-input-border-space;
+      left: $global-input-border-size + $global-input-border-space;
+      width: calc(100% - #{($global-input-border-size + $global-input-border-space) * 2});
+      height: calc(100% - #{($global-input-border-size + $global-input-border-space) * 2});
       background-color: var(--input-radio--fill);
       opacity: 0;
       transition: opacity var(--animation-easing) var(--animation-duration-standard);
