--- a/src/styles/components/form/fields/_checkbox.scss
+++ b/src/styles/components/form/fields/_checkbox.scss
@@ -20,6 +20,7 @@
     width: $global-input-element-size;
     height: $global-input-element-size;
     display: inline-flex;
+    margin-right: unit(1);
 
     &::before {
       position: absolute;
