--- a/src/styles/components/form/fields/_toggle-button.scss
+++ b/src/styles/components/form/fields/_toggle-button.scss
@@ -13,6 +13,8 @@ $component-name: form-field-togglebutton;
   }
 
   &__checkbox {
+    @include clickable;
+    border-radius: 50%;
     position: relative;
     width: $size;
     height: $size;
