add cross icon and update boolean option props

--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -203,7 +203,8 @@ $-icon-color-modifiers: (
     }
   }
 
-  &[name='tick'] {
+  &[name='tick'],
+  &[name='cross'] {
     .cls-1 {
       fill: color('#{$main-color}');
     }
