--- a/stories/Boolean.stories.scss
+++ b/stories/Boolean.stories.scss
@@ -1,3 +1,9 @@
 .red {
-  background: red;
+  &.boolean-option--selected {
+    border-color: red;
+  }
+
+  .round-checkbox--checked {
+    background: red;
+  }
 }
