--- a/src/styles/components/form/fields/_slider.scss
+++ b/src/styles/components/form/fields/_slider.scss
@@ -128,6 +128,7 @@ $module-name: form-field-slider;
       width: max-content;
       min-height: $touch-height;
       max-width: $align-margin * 1.75;
+      text-align: center;
     }
 
     &::after {
