start work on 6.0.0 - implement Skeleton

--- a/src/styles/components/_all.scss
+++ b/src/styles/components/_all.scss
@@ -14,5 +14,6 @@
 @import 'modal';
 @import 'progress';
 @import 'progress-bar';
+@import 'skeleton';
 @import 'cards/cards';
 @import 'toasts/toasts';
