--- a/src/styles/components/_skeleton.scss
+++ b/src/styles/components/_skeleton.scss
@@ -8,14 +8,14 @@
 };
 
 .skeleton {
-  --defaultBaseColor: var(--color-platinum--dark);
-  --defaultHighlightColor: var(--color-platinum);
+  --defaultBaseColor: rgba(0, 0, 0, .09);
+  --defaultHighlightColor: rgb(255, 255, 255, .34);
   background-color: var(--defaultBaseColor);
   background-image: linear-gradient(
     90deg,
-    var(--defaultBaseColor),
+    transparent,
     var(--defaultHighlightColor),
-    var(--defaultBaseColor)
+    transparent
   );
   background-size: 200px 100%;
   background-repeat: no-repeat;
@@ -24,4 +24,14 @@
   line-height: 1;
   width: 100%;
   animation: skeleton 1s ease-in-out infinite;
+
+  @each $ordinal-color in $ordinal-colors {
+    $i: index($ordinal-colors, $ordinal-color);
+
+    &--node-highlight-seq-#{$i} {
+      .node__node-trim {
+        stroke: color($ordinal-color);
+      }
+    }
+  }
 }
