--- a/src/styles/components/form/fields/_text.scss
+++ b/src/styles/components/form/fields/_text.scss
@@ -1,6 +1,7 @@
 $module-name: form-field-text;
 
 .#{$module-name} {
+  position: relative;
 
   &__input {
     display: block;
@@ -22,6 +23,19 @@ $module-name: form-field-text;
       color: var(--input-placeholder);
       font-style: italic;
     }
+  }
+
+  &__adornment {
+    position: absolute;
+    top: 0;
+    right: 1em;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    pointer-events: none;
+    transition: all var(--animation-easing) var(--animation-duration-fast);
+    width: 1.5em;
   }
 
   &--has-focus,
@@ -57,6 +71,29 @@ $module-name: form-field-text;
     padding-top: 2rem;
     padding-bottom: 2rem;
     resize: vertical;
+  }
+
+  &--adornment-right {
+    .#{$module-name}__input {
+      padding-right: 3.25em;
+    }
+  }
+
+  &--adornment-left {
+    .#{$module-name}__input {
+      padding-left: 3.25em;
+    }
+
+    .#{$module-name}__adornment {
+      left: 1em;
+      right: unset;
+    }
+  }
+
+  &--has-focus {
+    .#{$module-name}__adornment {
+      // opacity: 0;
+    }
   }
 
   &--has-error {
