add left and right adornments simultaneously, and clear button for search

--- a/src/styles/components/form/fields/_text.scss
+++ b/src/styles/components/form/fields/_text.scss
@@ -25,17 +25,25 @@ $module-name: form-field-text;
     }
   }
 
-  &__adornment {
+  &__adornment-left,
+  &__adornment-right {
     position: absolute;
     top: 0;
-    right: 1em;
     bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    pointer-events: none;
+    // pointer-events: none;
     transition: all var(--animation-easing) var(--animation-duration-fast);
     width: 1.5em;
+  }
+
+  &__adornment-left {
+    left: 1em;
+  }
+
+  &__adornment-right {
+    right: 1em;
   }
 
   &--has-focus,
@@ -73,26 +81,15 @@ $module-name: form-field-text;
     resize: vertical;
   }
 
-  &--adornment-right {
+  &--has-right-adornment {
     .#{$module-name}__input {
       padding-right: 3.25em;
     }
   }
 
-  &--adornment-left {
+  &--has-left-adornment {
     .#{$module-name}__input {
       padding-left: 3.25em;
-    }
-
-    .#{$module-name}__adornment {
-      left: 1em;
-      right: unset;
-    }
-  }
-
-  &--has-focus {
-    .#{$module-name}__adornment {
-      // opacity: 0;
     }
   }
 
