--- a/src/styles/global/core/_helpers.scss
+++ b/src/styles/global/core/_helpers.scss
@@ -27,3 +27,19 @@
     user-select: text;
   }
 }
+
+// These includes/mixins are only to be used when absolutely necessary!
+
+@mixin platform-only-ios {
+  @at-root .app--ios #{&} {
+    @content;
+  }
+}
+
+@mixin platform-not-ios {
+  @at-root .app--electron #{&}, .app-android #{&} {
+    @content;
+  }
+}
+
+
