--- a/src/styles/components/cards/_data-card.scss
+++ b/src/styles/components/cards/_data-card.scss
@@ -4,8 +4,12 @@
   color: var(--color-navy-taupe);
   display: flex;
   flex-direction: column;
+  flex: 1;
 
-  &__title {
+  &__label {
+    flex: 1;
+    display: flex;
+    align-items: center;
     padding: 1rem;
     background-color: var(--color-platinum);
     h2 {
