--- a/src/styles/components/cards/_data-card.scss
+++ b/src/styles/components/cards/_data-card.scss
@@ -23,6 +23,7 @@
     background: var(--color-rich-black);
     overflow: hidden;
     padding: 0.5rem 1rem;
+    width: 100%;
 
     &-label,
     &-value {
@@ -41,13 +42,16 @@
       opacity: 0.5;
       text-align: right;
       padding-right: 1rem;
+      overflow-wrap: anywhere;
+      hyphens: auto;
+      min-width: 150px;
+      // width: 40%;
+      max-width: 250px;
     }
 
     &-value {
       padding-left: 0;
-      width: 100%;
     }
-
 
     &-item {
       display: table-row;
