--- a/src/styles/components/cards/_data-card.scss
+++ b/src/styles/components/cards/_data-card.scss
@@ -44,13 +44,13 @@
       padding-right: 1rem;
       overflow-wrap: anywhere;
       hyphens: auto;
-      min-width: 150px;
-      // width: 40%;
-      max-width: 250px;
+      width: 33%;
+      min-width: 10rem;
     }
 
     &-value {
       padding-left: 0;
+      width: 100%;
     }
 
     &-item {
