--- a/src/styles/components/sprites/_export-sprite.scss
+++ b/src/styles/components/sprites/_export-sprite.scss
@@ -1,9 +1,4 @@
-html, body {
-  background: black;
-}
-
 .export-sprite {
-  background: rgba(255, 255, 255, 0.1);
   position: relative;
   width: 100%;
   height: 100%;
@@ -24,13 +19,13 @@ html, body {
 
   &__destination {
     position: absolute;
-    left: 200px;
-    top: 200px;
     width: 50px;
     height: 50px;
     transform: translate(-50%, -50%);
-    border-radius: 2px;
+    border-radius: 50px;
     background-color: white;
-    z-index: -100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
