--- a/src/styles/components/_prompts.scss
+++ b/src/styles/components/_prompts.scss
@@ -13,6 +13,7 @@ $module-name: prompts;
   color: var(--text);
   font-weight: 400;
   line-height: 1.1;
+  overflow: hidden;
 
   &__spacer {
     flex: 0 0 calc(var(--pip-size) + #{unit(1)});
