experiment with animated list

--- a/src/styles/components/_all.scss
+++ b/src/styles/components/_all.scss
@@ -4,6 +4,7 @@
 @import 'icons';
 @import 'inputs';
 @import 'form/fields';
+@import 'list/all';
 @import 'hover-marquee';
 @import 'sidemenu';
 @import 'node';
