--- a/src/styles/components/cards/_protocol-card.scss
+++ b/src/styles/components/cards/_protocol-card.scss
@@ -8,9 +8,23 @@ $component: 'protocol-card';
   overflow: hidden;
   flex-direction: column-reverse;
   height: 13rem;
+  position: relative;
 
   &--clickable {
     @include clickable(2);
+  }
+
+  &--selected {
+    &:before {
+      content: '';
+      position:absolute;
+      top:0;
+      bottom:0;
+      left:0;
+      right: 0;
+      border: 0.4rem solid var(--color-mustard);
+      border-radius: var(--border-radius);
+    }
   }
 
   &--condensed {
