WIP progress circle

--- a/src/styles/components/_all.scss
+++ b/src/styles/components/_all.scss
@@ -14,6 +14,7 @@
 @import 'modal';
 @import 'progress';
 @import 'progress-bar';
+@import 'progress-circle';
 @import 'cards/cards';
 @import 'sprites/sprites';
 @import 'toasts/toasts';
