--- a/src/styles/components/sprites/_export-sprite.scss
+++ b/src/styles/components/sprites/_export-sprite.scss
@@ -1,4 +1,7 @@
 .export-sprite {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   width: 100%;
   height: 100%;
@@ -18,17 +21,35 @@
   }
 
   &__destination {
-    position: absolute;
-    transform: translate(-50%, -50%);
+    --destination-size: #{unit(12)};
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: var(--z-global-ui);
+    margin-bottom: -#{unit(2)};
 
-    .progress-circle {
-      --circle-text-color: var(--color-charcoal);
-      --circle-background-color: var(--color-white);
-      --circle-complete-color: var(--primary);
+    &__circle {
+      flex: 0 0 var(--destination-size);
+      height: var(--destination-size);
+
+      .progress-circle {
+        --circle-text-color: var(--color-charcoal);
+        --circle-background-color: var(--color-white);
+        --circle-complete-color: var(--primary);
+      }
     }
+
+    &__text {
+      flex: 0 0 unit(2);
+      height: unit(2);
+
+      h4 {
+        margin-bottom: 0;
+        margin-top: unit(1);
+        color: var(--text);
+      }
+    }
+
   }
 }
