--- a/src/styles/components/list/_item-list.scss
+++ b/src/styles/components/list/_item-list.scss
@@ -13,9 +13,14 @@
   }
 
   &__item {
-    display: flex;
+
+    display: inline-flex;
     justify-content: center;
     align-items: center;
+
+    &--hidden {
+      opacity: 0;
+    }
   }
 }
 
