--- a/src/styles/components/list/_item-list.scss
+++ b/src/styles/components/list/_item-list.scss
@@ -13,14 +13,10 @@
   }
 
   &__item {
-
     display: inline-flex;
     justify-content: center;
     align-items: center;
-
-    &--hidden {
-      opacity: 0;
-    }
+    width: 100%;
   }
 }
 
