working with selection

--- a/src/styles/components/_node.scss
+++ b/src/styles/components/_node.scss
@@ -109,6 +109,10 @@
     opacity: 0.5;
   }
 
+  &--clickable {
+    cursor: pointer;
+  }
+
   &--selected {
     .node__node-trim {
       stroke: palette('selected');
