--- a/src/styles/components/_node.scss
+++ b/src/styles/components/_node.scss
@@ -121,6 +121,7 @@
     }
   }
 
+  // Used for narrative key
   @each $ordinal-color in $ordinal-colors {
     $i: index($ordinal-colors, $ordinal-color);
 
