--- a/src/styles/components/form/fields/_date-picker.scss
+++ b/src/styles/components/form/fields/_date-picker.scss
@@ -40,7 +40,7 @@ $darken: rgba(0, 0, 0, 0.2);
   --lighten: $lighten;
   --darken: $darken;
   max-width: 100%;
-  overflow: hidden;
+  position: relative;
 
   &__placeholder {
     color: var(--input-placeholder);
@@ -104,9 +104,19 @@ $darken: rgba(0, 0, 0, 0.2);
     }
   }
 
+  &__container {
+    position: absolute;
+    z-index: var(--z-global-ui);
+    width: 100%;
+    max-width: 30rem;
+    box-shadow: 0 2rem 3rem 0 var(--modal-window-box-shadow);
+    margin-bottom: 3rem;
+  }
+
   &__panels {
-    background-color: var(--background);
+    background-color: var(--color-rich-black);
     height: $height;
+    overflow: hidden;
   }
 
   &__panels-container {
