define global var for datepicker panel bg
- define color for DatePicker panel background at global level in the var datepicker-panel-bg as rich-black
- use this variable in _date-picker.scss instead of defining the color there
- This allows for overwriting datepicker-panel-bg to be white in Architect

clean up

--- a/src/styles/components/form/fields/_date-picker.scss
+++ b/src/styles/components/form/fields/_date-picker.scss
@@ -114,7 +114,7 @@ $darken: rgba(0, 0, 0, 0.2);
   }
 
   &__panels {
-    background-color: var(--color-rich-black);
+    background-color: var(--datepicker-panel-bg);
     height: $height;
     overflow: hidden;
   }
