--- a/src/styles/components/form/fields/_date-picker.scss
+++ b/src/styles/components/form/fields/_date-picker.scss
@@ -5,6 +5,7 @@ $lighten: rgba(255, 255, 255, 0.05);
 $darken: rgba(0, 0, 0, 0.2);
 
 .form-field-date-picker {
+  --datepicker-panel-bg: var(--input-panel-bg);
   color: var(--input-text);
   &__error {
     opacity: 0;
