linting for jsx-a11y

--- a/src/styles/components/form/fields/_boolean.scss
+++ b/src/styles/components/form/fields/_boolean.scss
@@ -49,6 +49,7 @@
   @include clickable(1);
   cursor: pointer;
   flex: 1 1 100%;
+  position: relative;
   width: 100%; // for when used outside of flex container;
   display: inline-flex;
   border-color: transparent;
